--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,4 @@
 [profile.default]
-src = "src"
-out = "out"
-libs = ["lib"]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+src = 'src'
+out = 'out'
+libs = ['node_modules', 'lib']
